# midi-orchestra-rs

./: .gitignore  Cargo.toml  README.md
src/: beep.rs  client.rs  connection.rs  convert_duration.rs  main.rs  midi.rs  packet.rs  server.rs
src/policies/: broadcast.rs  by_channel.rs  by_freq.rs  by_track.rs  mod.rs
